czworoscian dopasowana wielkosć

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <form>
     <input type="checkbox" id="rotateX" name="rotateX" onclick="runWebGL()"> rotacja X
-    <input type="checkbox" id="rotateY" name="rotateY" onclick="runWebGL()"> rotacja Y
+    <input checked=true id="rotateY" name="rotateY" onclick="runWebGL()" type="checkbox"> rotacja Y
     <input type="checkbox" id="rotateZ" name="rotateZ" onclick="runWebGL()"> rotacja Z
 </form>
 
